--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,23 @@
   text-align: center;
 }
 
+* {
+  padding: 0;
+  margin: 0;
+}
+
+p, h3 {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+}
+
+.center {
+  margin: 0 auto;
+}
+
+.container{
+  max-width: 1200px;
+}
+
 .flex{
   display: flex;
 }
@@ -40,6 +57,31 @@
 
 .remove-underline{
   text-decoration: none;
+}
+
+.pointer{
+  cursor: pointer;
+}
+
+.product-title{
+  font-weight: 500;
+  font-size: 33px;
+  margin-bottom: 12px;
+}
+
+.product-detail-text {
+  font-weight: 500;
+  color: #5c5a5a;
+  font-size: 16px;
+  margin-top: 12px;
+}
+
+.product-description {
+  font-weight: 500;
+  margin-top: 10px;
+  line-height: 1.4;
+  font-size: 18px;
+
 }
 
 .App-logo {
