--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ p, h3 {
   flex-direction: column;
 }
 
-.flex-end {
+.justify-end {
   justify-content: end;
 }
 
@@ -47,8 +47,16 @@ p, h3 {
   align-items: center;
 }
 
+.align-end{
+  align-items: end;
+}
+
 .gap-20 {
   gap: 20px;
+}
+
+.gap-45 {
+  gap: 45px;
 }
 
 .box-border{
@@ -97,7 +105,7 @@ p, h3 {
   font-weight: 500;
   margin-top: 10px;
   line-height: 1.4;
-  font-size: 18px;
+  font-size: 22px;
 
 }
 
