cached product data and refactor code

--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,18 @@ p, h3 {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
+.underline{
+  &&:hover{
+    text-decoration: underline;
+  }
+}
+
 .center {
   margin: 0 auto;
+}
+
+.text-align{
+  text-align: "center";
 }
 
 .container{
@@ -107,39 +117,4 @@ p, h3 {
   line-height: 1.4;
   font-size: 22px;
 
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
